# dashscene

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  project.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/dashbuf/: Cargo.toml  README.md
crates/dashbuf/src/: lib.rs
crates/dashc/: Cargo.toml  README.md
crates/dashc/src/: lib.rs
crates/dashcue/: Cargo.toml  README.md
crates/dashcue/src/: lib.rs
crates/dashlang/: Cargo.toml  README.md
crates/dashlang/src/: lib.rs
crates/dashpaint/: Cargo.toml  README.md
crates/dashpaint/src/: lib.rs
crates/dashscene/: Cargo.toml  README.md
crates/dashscene-compose/: Cargo.toml  README.md
crates/dashscene-compose/src/: lib.rs
crates/dashscene-core/: Cargo.toml  README.md
crates/dashscene-core/src/: lib.rs
crates/dashscene-engine/: Cargo.toml  README.md
crates/dashscene-engine/src/: lib.rs
crates/dashscene-unity/: Cargo.toml  README.md
crates/dashscene-unity/src/: lib.rs
crates/dashscene-web/: Cargo.toml  README.md
crates/dashscene-web/src/: lib.rs
crates/dashscene/src/: lib.rs
crates/dashscore/: Cargo.toml  README.md
crates/dashscore/src/: lib.rs
